@@ -4,6 +4,8 @@
     <groupId>it1901</groupId>
     <artifactId>core</artifactId>
 
+
+
     <parent>
         <groupId>it1901</groupId>
         <artifactId>movielist</artifactId>
@@ -46,7 +48,7 @@
         		<artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                    @{jaCoCoArgLine} --add-opens ui/ui=ALL-UNNAMED
+                    @{jaCoCoArgLine} --add-opens core/core=ALL-UNNAMED --add-opens core/core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
                 </configuration>
 	        </plugin>
